--- a/src/App.css
+++ b/src/App.css
@@ -14,11 +14,11 @@
 
 body {
   font-family: var(--font-roboto);
-  background-color: #212426;
+  background-color: #121212;
 }
 
 .app {
-  padding: 4rem;
+  padding: 3rem;
 
   display: flex;
   justify-content: center;
@@ -49,6 +49,7 @@ h2 {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   width: fit-content;
+  text-align: center;
 }
 
 .search {
@@ -62,8 +63,8 @@ h2 {
   padding: 1.5rem 1.75rem;
   border-radius: 3rem;
   background: #1f2123;
-  -webkit-box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
-  box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
+  -webkit-box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #121212;
+  box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #121212;
 }
 
 .search input {
@@ -97,8 +98,8 @@ h2 {
   cursor: pointer;
 
   background: #1f2123;
-  -webkit-box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
-  box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
+  -webkit-box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #121212;
+  box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #121212;
 } 
 
 .empty {
@@ -118,7 +119,7 @@ h2 {
 
 .container {
   width: 100%;
-  margin-top: 3rem;
+  margin-top: 2rem;
 
   display: flex;
   justify-content: center;
@@ -127,45 +128,57 @@ h2 {
 }
 
 
-@media screen and (max-width: 600px) {
-  .app {
-    padding: 4rem 2rem;
-  }
+.song {
+  width: 380px;
+  height: 100%;
+  margin: 1rem;
 
-  .search {
-    padding: 1rem 1.75rem;
-    width: 100%;
-  }
-
-  .search input {
-    font-size: 1rem;
-  }
-
-  .search img {
-    width: 20px;
-    height: 20px;
-  }
+  position: relative;
+  border-radius: 12px;
+  overflow: hidden;
+  border: none;
+  
+  text-align: left;
+  color: white;
+  transition: all 0.4s cubic-bezier(0.175, 0.885, 0, 1);
+  box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1);
 }
 
-@media screen and (max-width: 400px) {
-  .app {
-    padding: 4rem 1rem;
-  }
-
-  h1 {
-    font-size: 2rem;
-  }
-
-  .container {
-    margin-top: 2rem;
-  }
-
-  .movie {
-    width: "100%";
-    margin: 1rem;
-  }
+.song:hover {
+  box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.1);
+  transform: scale(1.05, 1.05);
 }
 
+.song {
+  
+}
+
+.song h3 {
+  font-size: 26px;
+  background-color: #ffffff;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  
+}
+
+.song span {
+  color: rgb(216, 216, 216);
+  font-size: 16px;
+}
 .track-item {
   color: rgb(255, 255, 255);
+}
+
+
+@media (max-width: 768px) {
+  .song h3 {
+    overflow: hidden;
+  }
+}
+
+@media (min-width: 769px) {
+  .song h3 {
+    overflow: visible;
+  }
 }
