--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,7 @@ h2 {
   font-size: 1.5rem;
   font-family: var(--font-raleway);
   font-weight: 500;
-  padding-right: 1rem;
+  padding-right:  rem;
 
   outline: none;
   color: #a1a1a1;
@@ -85,10 +85,11 @@ h2 {
   width: 35px;
   height: 35px;
   cursor: pointer;
+  margin: 0 0 ;
 }
 
 .search button {
-  padding: 20px 40px;
+  padding: 20px 0px;
   border-radius: 0.5rem;
   margin-left: 15px;
   color: #a1a1a1;
@@ -179,6 +180,12 @@ h2 {
 
   .search{
     width: 110%;
+  }
+  .search input {
+    font-size: 1rem;
+  }
+  .song{
+    width: 300px;
   }
 
   h1{
