Finalized Genre Functionality

--- a/src/App.css
+++ b/src/App.css
@@ -173,19 +173,68 @@ h2 {
     width: 95%;
   }
   .search input {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
   }
   .song{
-    width: 300px;
+    width: 150px;
   }
 
   h1{
     text-align: center;
   }
+
+  .song h3 {
+    font-size: 16px;
+    background-color: #ffffff;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    
+  }
+  .song span {
+    color: rgb(216, 216, 216);
+    font-size: 13px;
+  }
 }
 
 @media (min-width: 850px) {
   .song h3 {
-    overflow: visible;
+    overflow: auto;
+  }
+}
+
+@media (max-width: 800px){
+  .song h3 {
+    overflow: hidden;
+  }
+
+  .search{
+    width: 135%;
+  }
+  .search input {
+    font-size: .8rem;
+  }
+  .song{
+    width: 90px;
+    margin: .55rem;
+
+  }
+
+  h1{
+    text-align: left;
+    font-size: 30px;
+  }
+
+  .song h3 {
+    font-size: 14px;
+    background-color: #ffffff;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    
+  }
+  .song span {
+    color: rgb(216, 216, 216);
+    font-size: 13px;
   }
 }
